
option java_outer_classname="ProductVersionProtocol";
package Alachisoft.NCache.Common.Protobuf;
message ProductVersion {
optional string ProductName = 1;
optional bytes MajorVersion1 = 2;
optional bytes MinorVersion1 = 3;
optional bytes MajorVersion2 = 4;
optional bytes MinorVersion2 = 5; 
optional int32 EditionID = 6;
optional bytes AddiotionalData = 7; 
}
